--- a/3rd week/3rd week/3rd week.vcxproj.filters
+++ b/3rd week/3rd week/3rd week.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="3주차_11일차.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="3주차_12일차.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
