--- a/3rd week/3rd week/3rd week.vcxproj.filters
+++ b/3rd week/3rd week/3rd week.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="3주차_12일차.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="3주차_13일차.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
