Complete 3rd week

--- a/3rd week/3rd week/3rd week.vcxproj
+++ b/3rd week/3rd week/3rd week.vcxproj
@@ -149,6 +149,10 @@
     <ClCompile Include="3주차_13일차.c">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="3주차_14일차.c">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </ClCompile>
+    <ClCompile Include="3주차_15일차.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
